--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(Liso C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Liso main.c)
+add_executable(echo_server echo_server.c)
+
+add_executable(echo_client.c echo_client.c)
+
+add_executable(select select.c)
