Okay! Though very unsafe!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,10 @@ project(Liso C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(echo_server echo_server.c)
+add_executable(echo_server liso.c clog.c clog.h parse.c parse.h)
 
 add_executable(echo_client.c echo_client.c)
 
-add_executable(select select.c)
+add_executable(parser example.c parse.h parse.c)
+
+# add_executable(select select.c)
